# FarenMediaLibrary

./: .appveyor.yml  .editorconfig  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  License.md  README.md  Setup.sh  appveyor.yml
Tests/Math/: CMakeLists.txt  FunctionsTests.cpp  MatrixTests.cpp  QuadTreeTests.cpp  VectorTests.cpp  main.cpp
engine/: CMakeLists.txt
engine/src/: main.cpp
extlib/: CMakeLists.txt
extlib/Box2D/: CMakeLists.txt
extlib/ECS/: CMakeLists.txt  README.md
extlib/ECS/Tests/: CMakeLists.txt  ComponentTest.cpp  allocation_test.cpp
extlib/ECS/lib/: CMakeLists.txt  Makefile
extlib/ECS/sample/: CMakeLists.txt  main.cpp
extlib/SDL2/: CMakeLists.txt
extlib/SDL2/include/: SDL_config.h
extlib/assimp/: CMakeLists.txt
extlib/assimp/code/: CMakeLists.txt
extlib/bullet3/: CMakeLists.txt
extlib/bullet3/src/: CMakeLists.txt
extlib/freetype2/: CMakeLists.txt
extlib/glew/: CMakeLists.txt
extlib/lua/: CMakeLists.txt  Makefile  luac
extlib/lua/src/: CMakeLists.txt  Makefile  lua  luac
extlib/sol2/sol2/: forward.hpp  sol.hpp
gui/: CMakeLists.txt
gui/extlib/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_internal.h  imgui_user.cpp  imgui_user.h  imgui_widgets.cpp
gui/include/: ComponentInterface.h  Component_GUI.h  Inspector.hpp  MacroInspectorHelper.h  MainWindow.h  MeshInspector.h  TransformInspector.h
gui/include/inspector/: scriptmanagerinspector.hpp
gui/src/: Editor.cpp  Editor.h  EditorView.cpp  EditorView.h  Export.cpp  Export.hpp  FileNavigator.cpp  FileNavigator.h  FilePath.cpp  FilePath.h  GListEntities.cpp  GListEntities.h  GWindow.cpp  GWindow.h  GameView.cpp  GameView.h  Inspector.cpp  ListComponentWindow.cpp  ListComponentWindow.hpp  MainWindow.cpp  MainWindow.h  MaterialInspector.cpp  MeshInspector.cpp  PickingSystem.cpp  PickingSystem.h  PortableFileDialog.cpp  PortableFileDialog.h  SaveProjectWindow.cpp  SaveProjectWindow.h  ShaderCompiler.cpp  ShaderCompiler.h  ToolBar.cpp  ToolBar.hpp  TransformInspector.cpp  debuglogger.cpp  debuglogger.h  dialogfilebrowser.cpp  dialogfilebrowser.h  imgui_impl_glfw_gl3.cpp  imgui_impl_opengl3.cpp  (+9 more)
gui/src/ImGuizmo/: ImGuizmo.cpp  ImGuizmo.h
gui/src/Resources/: IconManager.cpp  IconManager.hpp
gui/src/Shader/: ShaderCompiler.cpp  ShaderIncluder.cpp  ShaderIncluder.hpp
gui/src/Window/: GDebugLogger.cpp  GDebugLogger.h  GEditorView.cpp  GEditorView.h  GFileNavigator.cpp  GFileNavigator.h  GGameView.cpp  GGameView.h  GLauncher.cpp  GLauncher.h  GListComponent.cpp  GListComponent.hpp  GListEntities.cpp  GListEntities.h  GMaterialEditor.cpp  GMaterialEditor.h  GProjectSettings.cpp  GProjectSettings.h  GTextureEditor.cpp  GTextureEditor.hpp  GToolBar.cpp  GToolBar.hpp  GWindow.cpp  GWindow.h
gui/src/inspector/: Body3DInspector.h  Inspector.cpp  Inspector.hpp  MacroInspectorHelper.h  MaterialInspector.cpp  MaterialInspector.h  MeshInspector.cpp  MeshInspector.h  TransformInspector.cpp  TransformInspector.h  body3DInspector.cpp  body3DInspector.hpp  body3dinspector.cpp  bodyInspector.cpp  bodyInspector.hpp  cameraInspector.cpp  cameraInspector.hpp  colliderInspector.cpp  colliderInspector.hpp  inspector.cpp  inspector.hpp  macroInspectorHelper.hpp  materialInspector.cpp  materialInspector.hpp  meshInspector.cpp  meshInspector.hpp  pointLightInspector.cpp  pointLightInspector.hpp  pointlightinspector.cpp  pointlightinspector.h  scriptManagerInspector.cpp  scriptManagerInspector.hpp  scriptmanagerinspector.cpp  scriptmanagerinspector.hpp  textInspector.cpp  textInspector.hpp  transformInspector.cpp  transformInspector.hpp
lib/: .ycm_extra_conf.py  CMakeLists.txt
lib/FML/: Engine.cpp  Engine.h  EventComponents.h  NonCopyable.h  Object.cpp  Object.hpp  Time.cpp  TimeDef.h  Window.cpp  Window.h
lib/FML/Components/: CBody.cpp  CBody.h  CCamera.cpp  CCamera.h  CCollider.cpp  CCollider.h  CDirectionalLight.cpp  CDirectionalLight.h  CIdentity.cpp  CIdentity.h  CMaterial.cpp  CMaterial.h  CMesh.cpp  CMesh.h  CPointLight.h  CScriptManager.cpp  CScriptManager.h  CSource.cpp  CSource.h  CText.cpp  CText.h  CTransform.cpp  CTransform.h  Components.h  cevent.cpp  cevent.hpp  component.h  cpointlight.cpp
lib/FML/Core/: Bounds.cpp  Bounds.h  Color.h  Config.h  FilePath.h  GameObject.cpp  GameObject.h  GameObjectType.hpp  LinkedTree.h  Observer.cpp  QuadTree.h  RandomManager.cpp  Rect.cpp  Rect.h  Scene.cpp  Scene.h  SceneManager.cpp  Transform.h  application.cpp  application.h  filepath.cpp
lib/FML/Input/: Input.cpp  Input.h  InputManager.cpp
lib/FML/Music/: Listener.h  SoundSystem.cpp  SoundSystem.h
lib/FML/Physic/: PhysicSystem.cpp  PhysicSystem.h
lib/FML/Profiler/: Profile.cpp  Profiler.hpp
lib/FML/Rendering/: FrameBuffer.cpp  Image.cpp  (+27 more)
lib/include/: Animation.h  Animator.h  Body2D.h  CCamera.h  CCollider.h  CDirectionalLight.h  CMaterial.h  CMesh.h  CScriptManager.h  CSource.h  CText.h  CTransform.h  Camera.h  Circle.h  ColliderSystem.h  Color.h  Component.h  Drawable.h  Effect.h  Engine.h  GameObject.h  Image.h  Input.h  InputManager.h  Line.h  Listener.h  LuaManager.h  LuaScript.h  Mesh.h  MusicManager.h  NonCopyable.h  ParticleGenerator.h  PhysicSystem.h  PostProcessor.h  QuadTree.h  RFont.h  RandomManager.h  Rect.h  Rectangle.h  RenderQueue.h  (+26 more)
lib/src/: Animation.cpp  Animator.cpp  Body2D.cpp  CDirectionalLight.cpp  CMaterial.cpp  CMesh.cpp  CScriptManager.cpp  CSource.cpp  CText.cpp  CTransform.cpp  Camera.cpp  Circle.cpp  ColliderSystem.cpp  Color.cpp  Drawable.cpp  Engine.cpp  Engine.h  GameObject.cpp  Image.cpp  Input.cpp  InputManager.cpp  Line.cpp  Listener.cpp  LuaManager.cpp  LuaScript.cpp  Mesh.cpp  MusicManager.cpp  ParticleGenerator.cpp  PhysicSystem.cpp  PostProcessor.cpp  QuadTree.cpp  RFont.cpp  RandomManager.cpp  Rectangle.cpp  RenderQueue.cpp  RenderTexture.cpp  Renderer.cpp  RenderingSystem.cpp  Resource.cpp  ResourcesManager.cpp  (+21 more)
sample/: CMakeLists.txt
sample/src/: main.cpp
scriptCpp/: CMakeLists.txt
scriptCpp/include/: interface.hpp
scriptCpp/src/: implementation.cpp  interface.cpp
tests/: CMakeLists.txt
tests/src/: test_main.cpp
(+460 files in other folders)
