
set(BUILD_SHARED_LIBS OFF)

include(FetchContent)
set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)

#ECS
FetchContent_Declare(
  ECS
  GIT_REPOSITORY https://github.com/F4r3n/ECS.git
  GIT_TAG        ebe5fc753d3e4edc4a8c13580edf86c408f2eab0
)
FETCHCONTENT_MAKEAVAILABLE(ECS)

set(ECS_BUILD_STATIC ON CACHE BOOL "" FORCE)
set(ECS_BUILD_SHARED OFF CACHE BOOL "" FORCE)
set(ECS_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(ECS_BUILD_TESTS OFF CACHE BOOL "" FORCE)

#ASSIMP
set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(ASSIMP_NO_EXPORT ON)
set(ASSIMP_BUILD_ASSIMP_TOOLS OFF)
set(ASSIMP_BUILD_TESTS OFF)
set(ASSIMP_BUILD_SAMPLES OFF)
set(BUILD_SHARED_LIBS OFF)
FetchContent_Declare(
  ASSIMP
  GIT_REPOSITORY https://github.com/assimp/assimp.git
  GIT_TAG        9519a62dd20799c5493c638d1ef5a6f484e5faf1
)
FETCHCONTENT_MAKEAVAILABLE(ASSIMP)



set(EXTLIB_CMAKE_BINARY_DIR ${CMAKE_BINARY_DIR}/extlib)

#SDL
set(SDL_SHARED_ENABLED_BY_DEFAULT ON)
set(SDL_SHARED ON)
set(SDL_STATIC OFF)
set(SDL_TEST_LIBRARY OFF)
FetchContent_Declare(
  SDL
  GIT_REPOSITORY https://github.com/libsdl-org/SDL.git
  GIT_TAG        6af0448af95fe2d089db3e2b4f1218dab3e76116
)
FETCHCONTENT_MAKEAVAILABLE(SDL)


#OpenAL
set(ALSOFT_EXAMPLES OFF)
set(ALSOFT_TESTS OFF)
set(ALSOFT_UTILS OFF)
set(ALSOFT_CONFIG OFF)
set(ALSOFT_HRTF_DEFS OFF)
set(ALSOFT_AMBDEC_PRESETS OFF)
set(ALSOFT_EMBED_HRTF_DATA OFF)

FetchContent_Declare(
  OPENAL
  GIT_REPOSITORY https://github.com/kcat/openal-soft.git
  GIT_TAG        4a9e8f6ef5f58e66e7b1142db6ed909eab090b02
)
FETCHCONTENT_MAKEAVAILABLE(OPENAL)

#Bullet
set(USE_MSVC_RUNTIME_LIBRARY_DLL ON)
set(BUILD_BULLET3 ON)
set(BUILD_CPU_DEMOS OFF)
set(BUILD_BULLET2_DEMOS OFF)
set(BUILD_EXTRAS OFF)
set(BUILD_UNIT_TESTS OFF)
set(BUILD_OPENGL3_DEMOS OFF)
set(BUILD_ENET OFF)
set(BUILD_CLSOCKET OFF)
set(BUILD_OPENGL3_DEMOS OFF)
FetchContent_Declare(
  BULLET
  GIT_REPOSITORY https://github.com/bulletphysics/bullet3.git
  GIT_TAG        2c204c49e56ed15ec5fcfa71d199ab6d6570b3f5
)
FETCHCONTENT_MAKEAVAILABLE(BULLET)

#freetype2
set(SKIP_INSTALL_ALL ON)
set(FREETYPE_NO_DIST ON)

#VMA
FetchContent_Declare(
  VMA
  GIT_REPOSITORY https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator.git
  GIT_TAG        6eb62e1515072827db992c2befd80b71b2d04329
)
FETCHCONTENT_MAKEAVAILABLE(VMA)

foreach(TARGET freetype2 lua glew)

set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${EXTLIB_CMAKE_BINARY_DIR}/${TARGET}/lib)
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${EXTLIB_CMAKE_BINARY_DIR}/${TARGET}/lib)

message(${TARGET})
	add_subdirectory(${TARGET})
endforeach()

