cmake_minimum_required(VERSION 3.15)
set(BUILD_SHARED_LIBS OFF)

include(FetchContent)
set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)

#ECS
set(ECS_BUILD_STATIC ON CACHE BOOL "" FORCE)
set(ECS_BUILD_SHARED OFF CACHE BOOL "" FORCE)
set(ECS_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(ECS_BUILD_TESTS OFF CACHE BOOL "" FORCE)
FetchContent_Declare(
  ECS
  GIT_REPOSITORY https://github.com/F4r3n/ECS.git
  GIT_TAG        59b0cc1b58cba66c768762d8c8827bbcdcc5b697
)
FETCHCONTENT_MAKEAVAILABLE(ECS)



if(WANT_ASSIMP)
	#ASSIMP
	set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "" FORCE)
	set(ASSIMP_NO_EXPORT ON)
	set(ASSIMP_BUILD_ASSIMP_TOOLS OFF)
	set(ASSIMP_BUILD_TESTS OFF)
	set(ASSIMP_BUILD_SAMPLES OFF)
	set(BUILD_SHARED_LIBS OFF)
	set(ASSIMP_INSTALL OFF)
	set (ASSIMP_INJECT_DEBUG_POSTFIX OFF)
	set(ASSIMP_WARNINGS_AS_ERRORS OFF)
	FetchContent_Declare(
	  ASSIMP
	  GIT_REPOSITORY https://github.com/assimp/assimp.git
	  GIT_TAG        9519a62dd20799c5493c638d1ef5a6f484e5faf1
	)
	FETCHCONTENT_MAKEAVAILABLE(ASSIMP)
else()
	FetchContent_Declare(
  TINYOBJLOADER
  GIT_REPOSITORY https://github.com/tinyobjloader/tinyobjloader
  GIT_TAG        v2.0.0rc10
)
FETCHCONTENT_MAKEAVAILABLE(TINYOBJLOADER)
endif()





set(EXTLIB_CMAKE_BINARY_DIR ${CMAKE_BINARY_DIR}/extlib)

#SDL
set(SDL_SHARED_ENABLED_BY_DEFAULT ON)
set(SDL_SHARED OFF)
set(SDL_STATIC ON)
set(SDL_TEST_LIBRARY OFF)
FetchContent_Declare(
  SDL
  GIT_REPOSITORY https://github.com/libsdl-org/SDL.git
  GIT_TAG        078995bbe079e97251c7f75d45d797f5103c2377 #SDL3
)
FETCHCONTENT_MAKEAVAILABLE(SDL)


#Bullet
set(USE_MSVC_RUNTIME_LIBRARY_DLL ON)
set(BUILD_BULLET3 ON)
set(BUILD_CPU_DEMOS OFF)
set(BUILD_BULLET2_DEMOS OFF)
set(BUILD_EXTRAS OFF)
set(BUILD_UNIT_TESTS OFF)
set(BUILD_OPENGL3_DEMOS OFF)
set(BUILD_ENET OFF)
set(BUILD_CLSOCKET OFF)
set(BUILD_OPENGL3_DEMOS OFF)
FetchContent_Declare(
  BULLET
  GIT_REPOSITORY https://github.com/bulletphysics/bullet3.git
  GIT_TAG        3.25
)
FETCHCONTENT_MAKEAVAILABLE(BULLET)

#freetype2
set(SKIP_INSTALL_ALL ON)
set(FREETYPE_NO_DIST ON)

#VMA
FetchContent_Declare(
  VMA
  GIT_REPOSITORY https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator.git
  GIT_TAG        6eb62e1515072827db992c2befd80b71b2d04329
)
FETCHCONTENT_MAKEAVAILABLE(VMA)

#GLSLANG
set(ENABLE_HLSL OFF)
set(ENABLE_CTEST OFF)
set(ENABLE_GLSLANG_BINARIES OFF)
set(ENABLE_CTEST OFF)
set(ENABLE_SPVREMAPPER OFF)
FetchContent_Declare(
  GLSLANG
  GIT_REPOSITORY https://github.com/KhronosGroup/glslang.git
  GIT_TAG        f1cb8608b390a7f51b4ae0d62cd415ba47a59b86
)
FETCHCONTENT_MAKEAVAILABLE(GLSLANG)

#DOCTEST
FetchContent_Declare(
  DOCTEST
  GIT_REPOSITORY https://github.com/doctest/doctest.git
  GIT_TAG        v2.4.11
)
FETCHCONTENT_MAKEAVAILABLE(DOCTEST)

foreach(TARGET freetype2 lua glew)

set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${EXTLIB_CMAKE_BINARY_DIR}/${TARGET}/lib)
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${EXTLIB_CMAKE_BINARY_DIR}/${TARGET}/lib)

message(${TARGET})
	add_subdirectory(${TARGET})
endforeach()

